--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pokeapp",
+  "name": "poketoso",
   "version": "0.0.1",
   "author": "Ionic",
   "homepage": "https://ionicframework.com/",
@@ -25,6 +25,7 @@
     "@auth0/angular-jwt": "^3.0.1",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/geolocation": "^5.16.0",
+    "@ionic-native/native-audio": "^5.17.1",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
@@ -34,6 +35,7 @@
     "cordova-plugin-geolocation": "^4.0.2",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
     "cordova-plugin-ionic-webview": "^4.1.3",
+    "cordova-plugin-nativeaudio": "^3.0.9",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
@@ -81,7 +83,8 @@
       "cordova-plugin-ionic-webview": {
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-nativeaudio": {}
     },
     "platforms": [
       "android"
