--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^8.2.12",
+    "@angular/animations": "^8.2.14",
     "@angular/cdk": "^8.2.3",
     "@angular/common": "~8.1.2",
     "@angular/compiler": "~8.1.2",
@@ -23,23 +23,23 @@
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
     "@auth0/angular-jwt": "^3.0.1",
-    "@ionic-native/core": "^5.0.0",
-    "@ionic-native/geolocation": "^5.16.0",
-    "@ionic-native/native-audio": "^5.17.1",
-    "@ionic-native/splash-screen": "^5.0.0",
-    "@ionic-native/status-bar": "^5.0.0",
-    "@ionic/angular": "^4.7.1",
-    "@ionic/lab": "^2.0.13",
-    "cordova-android": "7.0.0",
-    "cordova-plugin-device": "^2.0.2",
+    "@ionic-native/core": "^5.18.0",
+    "@ionic-native/geolocation": "^5.18.0",
+    "@ionic-native/native-audio": "^5.18.0",
+    "@ionic-native/splash-screen": "^5.18.0",
+    "@ionic-native/status-bar": "^5.18.0",
+    "@ionic/angular": "^4.11.7",
+    "@ionic/lab": "^2.0.18",
+    "cordova-android": "^7.0.0",
+    "cordova-plugin-device": "^2.0.3",
     "cordova-plugin-geolocation": "^4.0.2",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
     "cordova-plugin-ionic-webview": "^4.1.3",
     "cordova-plugin-nativeaudio": "^3.0.9",
-    "cordova-plugin-splashscreen": "^5.0.2",
-    "cordova-plugin-statusbar": "^2.4.2",
-    "cordova-plugin-whitelist": "^1.3.3",
-    "core-js": "^2.5.4",
+    "cordova-plugin-splashscreen": "^5.0.3",
+    "cordova-plugin-statusbar": "^2.4.3",
+    "cordova-plugin-whitelist": "^1.3.4",
+    "core-js": "^2.6.11",
     "primeicons": "^1.0.0",
     "primeng": "^7.1.3",
     "rxjs": "~6.5.1",
