--- a/package.json
+++ b/package.json
@@ -40,9 +40,12 @@
     "cordova-plugin-statusbar": "^2.4.3",
     "cordova-plugin-whitelist": "^1.3.4",
     "core-js": "^2.6.11",
+    "net": "^1.0.2",
     "primeicons": "^1.0.0",
     "primeng": "^7.1.3",
     "rxjs": "~6.5.1",
+    "sockjs-client": "^1.4.0",
+    "stompjs": "^2.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
